[project]
name = "filespawn"
version = "0.1.1"
description = ""
authors = [
    {name = "Ang Aik Meng",email = "aikmeng@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]

# Enable package mode so Poetry treats this as a buildable/distributable package (sdist/wheel).
# Required when building/publishing via GitHub Actions and PyPI Trusted Publishing.
# Keep all package metadata (name, version, description, authors) together in one table to satisfy package-mode validation.
package-mode = true 

packages = [{include = "filespawn", from = "src"}]

[tool.poetry.scripts]
filespawn = "filespawn.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
